complete event dispatcher explanation

--- a/thelia.css
+++ b/thelia.css
@@ -1,4 +1,4 @@
-.reveal h1 {
+.reveal h1, .reveal h2, .reveal h3 {
     color: #EF8B35;
     text-shadow: none;
     font-family: 'Lato',Arial,serif;
